--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,8 +47,8 @@ jobs:
           pnpm build
           pnpm test
           echo "Publishing version ${{ steps.publish.outputs.version }}"
-          npm version --git-tag-version false --allow-same-version true ${{ steps.publish.outputs.version }}
-          pnpm publish --no-git-checks --access public
+          pnpm --filter "parse-ical" exec npm version --git-tag-version false --allow-same-version true ${{ steps.publish.outputs.version }}
+          pnpm --filter "parse-ical" publish --no-git-checks --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
