--- a/package.json
+++ b/package.json
@@ -1,42 +1,13 @@
 {
-  "name": "parse-ical",
-  "version": "1.0.5",
-  "description": "Parse iCAL (.ics) data into JS objects",
+  "name": "@parse-ical/root",
+  "private": true,
   "author": "Janina Wibker",
-  "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup",
-    "lint": "eslint . --ext ts && npm run typecheck",
-    "typecheck": "npx tsc",
-    "test": "vitest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/JaninaWibker/parse-ical.git"
-  },
-  "keywords": ["ical", "ics", "calendar", "typescript"],
   "license": "MIT",
-  "type": "module",
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE",
-    "package.json"
-  ],
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      },
-      "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
-      }
-    }
-  },
-  "dependencies": {
-    "rrule": "^2.8.1"
+  "scripts": {
+    "lint": "eslint . --ext ts && pnpm --filter 'parse-ical' typecheck",
+    "dev": "pnpm --filter 'parse-ical' dev",
+    "build": "pnpm --filter 'parse-ical' build",
+    "test": "pnpm --filter '@parse-ical/test' test"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -48,11 +19,6 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
-    "prettier": "^3.2.5",
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.2",
-    "vitest": "^1.3.1"
-  },
-  "main": "dist/index.cjs",
-  "types": "dist/index.d.cts"
+    "prettier": "^3.2.5"
+  }
 }
