--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-ical",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Parse iCAL (.ics) data into JS objects",
   "author": "Janina Wibker",
   "scripts": {
@@ -30,7 +30,7 @@
         "default": "./dist/index.js"
       },
       "require": {
-        "types": "./dist/index.d.ts",
+        "types": "./dist/index.d.cts",
         "default": "./dist/index.cjs"
       }
     }
@@ -52,5 +52,7 @@
     "tsup": "^8.0.2",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
-  }
+  },
+  "main": "dist/index.cjs",
+  "types": "dist/index.d.cts"
 }
